<resources>
    <string name="app_name">VRLauncher</string>
    <string name="label_passwd">密码:</string>
    <string name="wifi_connected">已连接</string>
    <string name="alert_name">警告</string>
    <string name="confirm">确认</string>
    <string name="alert_text">确认要取消当前连接吗？</string>
    <string name="apk_confirm">确认安装 %1$s ?</string>
    <string name="apk_uninstall_confirm">确认</string>
    <string name="apk_delete_dir">确认删除文件夹 %1$s ?</string>
    <string name="apk_delete_file">确认删除此文件(夹)吗？</string>
    <string name="apk_delete_file2">请注意：该操作不可逆！</string>
    <string name="apk_installing">安装中……</string>
    <string name="apk_uninstalling">卸载中……</string>
    <string name="apk_installed">已安装</string>
    <string name="apk_uninstalled">已卸载</string>
    <string name="deleting">删除中……</string>
    <string name="deleted">已删除</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">设置</string>
    <string name="title_activity_main">播放器</string>
    <string name="shutdown_ok">A键 确认关闭电源</string>
    <string name="shutdown_cancel">B键 取消</string>
    <string name="shutdown_ing">正在关闭电源……</string>
    <string name="unmounted">设备未插入</string>
    <string name="no_gampad">未连接到蓝牙手柄，请短按打开开关，首次连接请长按开始配对！</string>
    <string name="video_zuoyou">&#60; -- 左右3D</string>
    <string name="video_quanjing">&#60; -- 全景模式 -- &#62;</string>
    <string name="video_normal">正常模式 -- &#62;</string>
    <string name="menu_folder">文件夹</string>
    <string name="menu_Apps">应用</string>
    <string name="apk_uninstall_alert1">您需要卸载此应用吗？</string>
    <string name="apk_uninstall_alert2">卸载某个应用会导致其不可用！</string>
    <string name="guide">A&#160;确认&#160;&#160;&#160;&#160;B&#160;返回&#160;&#160;&#160;&#160;Y&#160;更多</string>
</resources>
