<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:background="#000000">

    <RelativeLayout
        android:id="@+id/left_view"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="match_parent"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:descendantFocusability="blocksDescendants">
        <RelativeLayout
            android:layout_width="360dp"
            android:layout_height="450dp"
            android:layout_centerInParent="true">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:gravity="center">
                <ImageView
                    android:id="@+id/battery_left"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/easyicon_battery_5"/>
                <TextView
                    android:id="@+id/battery_text_left"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="2dp"
                    android:textSize="14sp"
                    android:text=""
                    android:textColor="@color/white"
                    />
            </LinearLayout>

        </RelativeLayout>
        <ProgressBar
            android:id="@+id/loading_progressbar_left"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_centerInParent="true"/>
    <RelativeLayout
        android:layout_width="640px"
        android:layout_height="360px"
        android:layout_centerInParent="true"
        android:id="@+id/bg_home_left"
        android:background="@drawable/bg_home_6">
        <GridView
            android:id="@+id/explorer_left"
            android:numColumns="3"
            android:layout_centerInParent="true"
            android:layout_width="420px"
            android:layout_height="280px"
            android:clickable="false"
            >
        </GridView>
        <LinearLayout
            android:layout_width="420px"
            android:layout_height="280px"
            android:layout_centerInParent="true"
            android:orientation="vertical"
            android:id="@+id/alert_left"
            android:visibility="gone">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:orientation="horizontal">
                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1">
                </RelativeLayout>
                <RelativeLayout
                    android:id="@+id/delete_alert_left_icon"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/icon_circle">
                </RelativeLayout>
                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1">
                </RelativeLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/alert1_left"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:text="@string/apk_delete_file"
                    android:textColor="@color/white"
                    android:gravity="center"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:text="@string/apk_delete_file2"
                    android:textColor="@color/blue_dark"
                    android:gravity="center"/>
            </LinearLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">
                <!--<Button-->
                <!--android:id="@+id/uninstall_alert_left_cancel"-->
                <!--android:layout_width="96px"-->
                <!--android:layout_height="33px"-->
                <!--android:layout_centerVertical="true"-->
                <!--android:layout_alignParentLeft="true"-->
                <!--android:textColor="@color/white"-->
                <!--android:text="@android:string/cancel"-->
                <!--android:background="@drawable/uninstall_btn"/>-->
                <Button
                    android:id="@+id/uninstall_alert_left_confirm"
                    android:layout_width="192px"
                    android:layout_height="33px"
                    android:layout_centerInParent="true"
                    android:textColor="@color/white"
                    android:text="@string/apk_uninstall_confirm"
                    android:background="@drawable/uninstall_btn"/>
            </RelativeLayout>
        </LinearLayout>
    </RelativeLayout>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/right_view"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="match_parent"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:descendantFocusability="blocksDescendants">
        <RelativeLayout
            android:layout_width="360dp"
            android:layout_height="450dp"
            android:layout_centerInParent="true">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:gravity="center">
                <ImageView
                    android:id="@+id/battery_right"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/easyicon_battery_5"/>
                <TextView
                    android:id="@+id/battery_text_right"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="2dp"
                    android:textSize="14sp"
                    android:text=""
                    android:textColor="@color/white"
                    />
            </LinearLayout>

        </RelativeLayout>
        <ProgressBar
            android:id="@+id/loading_progressbar_right"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_centerInParent="true"/>
        <RelativeLayout
            android:layout_width="640px"
            android:layout_height="360px"
            android:layout_centerInParent="true"
            android:id="@+id/bg_home_right"
            android:background="@drawable/bg_home_6">
            <GridView
                android:id="@+id/explorer_right"
                android:numColumns="3"
                android:layout_centerInParent="true"
                android:layout_width="420px"
                android:layout_height="280px"
                android:clickable="false"
                >
            </GridView>
            <LinearLayout
                android:layout_width="420px"
                android:layout_height="280px"
                android:layout_centerInParent="true"
                android:orientation="vertical"
                android:id="@+id/alert_right"
                android:visibility="gone">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="2"
                    android:orientation="horizontal">
                    <RelativeLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1">
                    </RelativeLayout>
                    <RelativeLayout
                        android:id="@+id/delete_alert_right_icon"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@drawable/icon_circle">
                    </RelativeLayout>
                    <RelativeLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1">
                    </RelativeLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:orientation="vertical">
                    <TextView
                        android:id="@+id/alert1_right"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:text="@string/apk_delete_file"
                        android:textColor="@color/white"
                        android:gravity="center"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:text="@string/apk_delete_file2"
                        android:textColor="@color/blue_dark"
                        android:gravity="center"/>
                </LinearLayout>
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1">
                    <!--<Button-->
                    <!--android:id="@+id/uninstall_alert_left_cancel"-->
                    <!--android:layout_width="96px"-->
                    <!--android:layout_height="33px"-->
                    <!--android:layout_centerVertical="true"-->
                    <!--android:layout_alignParentLeft="true"-->
                    <!--android:textColor="@color/white"-->
                    <!--android:text="@android:string/cancel"-->
                    <!--android:background="@drawable/uninstall_btn"/>-->
                    <Button
                        android:id="@+id/uninstall_alert_right_confirm"
                        android:layout_width="192px"
                        android:layout_height="33px"
                        android:layout_centerInParent="true"
                        android:textColor="@color/white"
                        android:text="@string/apk_uninstall_confirm"
                        android:background="@drawable/uninstall_btn"/>
                </RelativeLayout>
            </LinearLayout>
        </RelativeLayout>
    </RelativeLayout>
</LinearLayout>
